# ps4-openorbis-newlib

./: build.sh
newlib/: configure.host
newlib/libc/: configure.ac
newlib/libc/sys/ps4/: Makefile.am  Makefile.in  bootstrap.sh  configure  configure.ac
